--- a/NUMPY.ipynb
+++ b/NUMPY.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6fb2d5bb-0bb0-44e6-8eac-813960a2e428",
    "metadata": {},
    "outputs": [],
@@ -699,9 +699,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "id": "532788ca",
+   "metadata": {},
+   "source": [
+    "#  converting system of linear equactions into metrices\n",
+    "\n",
+    "#     -x+3y=7\n",
+    "#     3x+2y=1     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0ad02884",
    "metadata": {},
    "outputs": [
     {
@@ -715,10 +726,6 @@
     }
    ],
    "source": [
-    "#  converting system of linear equactions into metrices\n",
-    "\n",
-    "#     -x+3y=7\n",
-    "#     3x+2y=1     \n",
     "A=np.array([[-1,3],\n",
     "            [3,2]],dtype=np.dtype(float))\n",
     "B=np.array([7,1],dtype=np.dtype(float))\n",
@@ -727,9 +734,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "378fd3dc",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# finding solution for the system 0f linear equations\n",
+    "# using numpy.linalg.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "349dc22d",
    "metadata": {},
    "outputs": [
     {
@@ -741,8 +761,6 @@
     }
    ],
    "source": [
-    "# finding solution for the system 0f linear equations\n",
-    "# using numpy.linalg.solve() function\n",
     "x=np.linalg.solve(A,B)\n",
     "print(f\"x={x}\")"
    ]
@@ -750,7 +768,244 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "571463c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "d5377772",
+   "metadata": {},
+   "source": [
+    "#  the above given system of linear equations gives a square matrix of 2x2 and a vector of 2x1\n",
+    "# in case of square matrix it is possible to calculate determinant of the matrix \n",
+    "# and if the determinant is not equal to zero then the matrix is invertible and\n",
+    "#  the solution of the system of linear equations can be found using the formula x=A^(-1)B\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4680b076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant of A=-11.000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculating determinant\n",
+    "det_A=np.linalg.det(A)\n",
+    "print(f\"Determinant of A={det_A}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf6cbf7",
+   "metadata": {},
+   "source": [
+    "Notice that the determinant is non zero as expected\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36fd6215",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d97a6a5e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Solving system of linear equations using elemination method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bbf9f55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on _ArrayFunctionDispatcher in module numpy:\n",
+      "\n",
+      "hstack(tup, *, dtype=None, casting='same_kind')\n",
+      "    Stack arrays in sequence horizontally (column wise).\n",
+      "\n",
+      "    This is equivalent to concatenation along the second axis, except for 1-D\n",
+      "    arrays where it concatenates along the first axis. Rebuilds arrays divided\n",
+      "    by `hsplit`.\n",
+      "\n",
+      "    This function makes most sense for arrays with up to 3 dimensions. For\n",
+      "    instance, for pixel-data with a height (first axis), width (second axis),\n",
+      "    and r/g/b channels (third axis). The functions `concatenate`, `stack` and\n",
+      "    `block` provide more general stacking and concatenation operations.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    tup : sequence of ndarrays\n",
+      "        The arrays must have the same shape along all but the second axis,\n",
+      "        except 1-D arrays which can be any length. In the case of a single\n",
+      "        array_like input, it will be treated as a sequence of arrays; i.e.,\n",
+      "        each element along the zeroth axis is treated as a separate array.\n",
+      "\n",
+      "    dtype : str or dtype\n",
+      "        If provided, the destination array will have this dtype. Cannot be\n",
+      "        provided together with `out`.\n",
+      "\n",
+      "        .. versionadded:: 1.24\n",
+      "\n",
+      "    casting : {'no', 'equiv', 'safe', 'same_kind', 'unsafe'}, optional\n",
+      "        Controls what kind of data casting may occur. Defaults to 'same_kind'.\n",
+      "\n",
+      "        .. versionadded:: 1.24\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    stacked : ndarray\n",
+      "        The array formed by stacking the given arrays.\n",
+      "\n",
+      "    See Also\n",
+      "    --------\n",
+      "    concatenate : Join a sequence of arrays along an existing axis.\n",
+      "    stack : Join a sequence of arrays along a new axis.\n",
+      "    block : Assemble an nd-array from nested lists of blocks.\n",
+      "    vstack : Stack arrays in sequence vertically (row wise).\n",
+      "    dstack : Stack arrays in sequence depth wise (along third axis).\n",
+      "    column_stack : Stack 1-D arrays as columns into a 2-D array.\n",
+      "    hsplit : Split an array into multiple sub-arrays\n",
+      "             horizontally (column-wise).\n",
+      "    unstack : Split an array into a tuple of sub-arrays along an axis.\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> import numpy as np\n",
+      "    >>> a = np.array((1,2,3))\n",
+      "    >>> b = np.array((4,5,6))\n",
+      "    >>> np.hstack((a,b))\n",
+      "    array([1, 2, 3, 4, 5, 6])\n",
+      "    >>> a = np.array([[1],[2],[3]])\n",
+      "    >>> b = np.array([[4],[5],[6]])\n",
+      "    >>> np.hstack((a,b))\n",
+      "    array([[1, 4],\n",
+      "           [2, 5],\n",
+      "           [3, 6]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(np.hstack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4a49de28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A_system=[[-1.  3.  7.]\n",
+      " [ 3.  2.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_system=np.concatenate((A,B.reshape(2,1)),axis=1)\n",
+    "print(f\"Matrix A_system={A_system}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c807f12b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 2. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A_system[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8ac823c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A_sys_res=A_system.copy()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ce6ac299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A_sys_res=[[-1.  3.  7.]\n",
+      " [ 0. 11. 22.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_sys_res[1]=3*A_sys_res[0]+A_sys_res[1]\n",
+    "print(f\"Matrix A_sys_res={A_sys_res}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "322bd44d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A_sys_res=[[-1.  3.  7.]\n",
+      " [ 0.  1.  2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_sys_res[1]=1/11*A_sys_res[1]\n",
+    "print(f\"Matrix A_sys_res={A_sys_res}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ab2040",
    "metadata": {},
    "outputs": [],
    "source": []
