--- a/NUMPY.ipynb
+++ b/NUMPY.ipynb
@@ -2009,9 +2009,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a67075a",
+   "metadata": {},
+   "source": [
+    "Quiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ef713e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select one of the options given:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c394df213bf54b3abdc79ba021b25557",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Answer:', layout=Layout(width='25%'), options=('A', 'B', 'C', 'D')…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, Dropdown\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "question1 = \"Select one of the options given:\"\n",
+    "solution1 = {\n",
+    "    'A': \"<span style='color: red;'>Not quite. While both functions are used to create empty arrays, np.zeros() is initialized with the value 0.</span>\",\n",
+    "    'B': \"<span style='color: red;'>Not quite. np.zeros() is initialized, and it gives an output of 0's.</span>\",\n",
+    "    'C': \"<span style='color: red;'>Not quite. Most often, np.empty() is faster since it is not initialized.</span>\",\n",
+    "    'D': \"<span style='color: green;'>True! np.empty() creates an array with uninitialized elements from available memory space and may be faster to execute.</span>\"\n",
+    "}\n",
+    "\n",
+    "def mcq(question, solution):\n",
+    "    print(question)  # Print the question\n",
+    "    \n",
+    "    answer_w = Dropdown(\n",
+    "        options=solution.keys(),\n",
+    "        value=None,\n",
+    "        description=\"Answer:\",\n",
+    "        layout=widgets.Layout(width='25%')\n",
+    "    )\n",
+    "\n",
+    "    @interact(Answer=answer_w)\n",
+    "    def display_answer(Answer):\n",
+    "        if Answer:\n",
+    "            display(HTML(solution[Answer]))\n",
+    "\n",
+    "# Run the function to show the quiz\n",
+    "mcq(question1, solution1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef713e44",
+   "id": "e4649b65",
    "metadata": {},
    "outputs": [],
    "source": []
