--- a/NUMPY.ipynb
+++ b/NUMPY.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6fb2d5bb-0bb0-44e6-8eac-813960a2e428",
    "metadata": {},
    "outputs": [],
@@ -2080,6 +2080,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e4649b65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9db21c20",
    "metadata": {},
    "outputs": [],
    "source": []
