--- a/NUMPY.ipynb
+++ b/NUMPY.ipynb
@@ -2588,8 +2588,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "5b537f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformation matrix:\n",
+      " [[ 3  0]\n",
+      " [ 0  0]\n",
+      " [ 0 -2]] \n",
+      "\n",
+      "Original vector:\n",
+      " [[3]\n",
+      " [5]] \n",
+      "\n",
+      " Result of the transformation:\n",
+      " [[  9]\n",
+      " [  0]\n",
+      " [-10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def L(v):\n",
+    "    A = np.array([[3,0], [0,0], [0,-2]])\n",
+    "    print(\"Transformation matrix:\\n\", A, \"\\n\")\n",
+    "    w = A @ v\n",
+    "    \n",
+    "    return w\n",
+    "\n",
+    "v = np.array([[3], [5]])\n",
+    "w = L(v)\n",
+    "\n",
+    "print(\"Original vector:\\n\", v, \"\\n\\n Result of the transformation:\\n\", w)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28bae126",
    "metadata": {},
    "outputs": [],
    "source": []
